--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,23 @@
+spring:
+  application:
+    name: eureka-service
+
+server:
+  port: 8080
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8080/eureka
+  instance:
+    prefer-ip-address: true
+
 zuul:
-  #Service will be mapped under the /api URI
-  prefix: /api
-  #Uncomment to disable auto-registering all services read from Eureka
   ignoredServices: '*'
+  prefix: /api
   routes:
-    users:
-      path: /**
-      url: http://localhost:8090
+    project:
+      path: /project/**
+      serviceId: PROJECT-SERVICE
