--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8080/eureka
   instance:
-    prefer-ip-address: true
+    hostname: localhost
 
 zuul:
   ignoredServices: '*'
