--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,4 @@ zuul:
     project:
       path: /project/**
       serviceId: PROJECT-SERVICE
+  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
